Martin wants some test changes